--- a/application/views/scripts/concessaoTrajeto/index.phtml
+++ b/application/views/scripts/concessaoTrajeto/index.phtml
@@ -6,6 +6,11 @@
 <script src="js/jquery-3.3.1.js"> </script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script type="text/javascript" src="<?= $this->baseUrl('dist/js/concessaoTrajeto.js') ?>"></script>
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.min.css" />
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker3.min.css" />
+
+<script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.min.js"></script>
+
 
 
 <div class="container fundo">
@@ -110,23 +115,42 @@
 					<div class="container-fluid"> 
 						<div class="row">
 							<div class="table-responsive">
+
+
 								<form method="post">
-									<div class="form-group">
-										<div class="col-sm-6">
-											<label >Data de Inicio</label>
-											<input type="date" class="form-control" id="dataInicio" name="dataInicio">
-											<label >Data de Vigência</label>
-											<input type="date" class="form-control" id="dataFim" name="dataFim">
-											<br>
-											<div class="alert alert-success" role="alert" style="display: none">
-												Cadastro realizado com sucesso! :)
-											</div>
-											<button type="button" class="btn btn-primary cadastrarConcessao" id="cadastrar">Adicionar</button>
-										</div>
-										<div class="col-sm-6">
-											<label >Documento de Autorização</label>
+									<div class="col-xs-8 date">
+										    <div class="form-group row">
+											<label class="col-sm-4 col-form-label" >Data de Inicio</label>										    	
+										        <div class="col-xs-8 date">
+										            <div class="input-group input-append date" id="datePicker">
+										                <input type="text" class="form-control" id="dataInicio" name="date" />
+										                <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
+										            </div>
+										        </div>
+										    </div>
+										    <div class="form-group row">
+											<label class="col-sm-4 col-form-label">Data Final</label>										        <div class="col-xs-8 date">
+										            <div class="input-group input-append date" id="datePicker2">
+										                <input type="text" class="form-control" id="dataFim" name="date" />
+										                <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
+										            </div>
+										        </div>
+										    </div>
+                                      <div class="form-group row">
+                                        <label class="col-sm-4 col-form-label" >Doc. de Autorização</label>
+                                        <div class="col-xs-8 date">
 											<input type="file" class="form-control" id="docAutorizacao" name="docAutorizacao">
-										</div>
+                                        </div>
+                                        </div>
+
+
+														<div class="alert alert-success" role="alert" style="display: none">
+															Cadastro realizado com sucesso! :)
+														</div>
+														<button type="button" class="btn btn-primary cadastrarConcessao" id="cadastrar">Adicionar</button>
+
+										
+</div>
 									</div>
 
 								</form>	
@@ -183,6 +207,21 @@
 								        });
 								    }
 
+									    $('#datePicker2').datepicker({
+									            format: 'dd/mm/yyyy'
+									        })
+									        .on('changeDate', function(e) {
+									            // Revalidate the date field
+									            $('#eventForm').formValidation('revalidateField', 'date');
+									        });
+
+									        									    $('#datePicker').datepicker({
+									            format: 'dd/mm/yyyy'
+									        })
+									        .on('changeDate', function(e) {
+									            // Revalidate the date field
+									            $('#eventForm').formValidation('revalidateField', 'date');
+									        });
 
 							    </script>						
 							</div>
