validações em editar cobrador ok

--- a/application/views/scripts/cobrador/editar.phtml
+++ b/application/views/scripts/cobrador/editar.phtml
@@ -100,11 +100,56 @@
 
 
 				</div>
-
+				
 				<!-- fim cad novo -->
+				
+
 
 				<div class="row">
 					<div class="col-12" style="padding: 15px">
+						<div class="row">
+							<div class="col-3"></div>
+							<div class="col-6">
+								<div class="alert alert-danger nome" style="display:none;" role="alert">
+                    		O campo NOME é de preenchimento obrigatório!
+                		</div>
+
+                		<div class="alert alert-danger cpf" style="display:none;" role="alert">
+                    		CPF inválido!
+                		</div>
+
+                		<div class="alert alert-danger telefone" style="display:none;" role="alert">
+                    		O campo TELEFONE é de preenchimento obrigatório!
+                		</div>
+
+                		<div class="alert alert-danger carteiraTrabalho" style="display:none;" role="alert">
+                    		O campo CARTEIRA DE TRABALHO é de preenchimento obrigatório!
+                		</div>
+
+                		<div class="alert alert-danger rg" style="display:none;" role="alert">
+                    		O campo RG é de preenchimento obrigatório!
+                		</div>
+
+                		<div class="alert alert-danger pis" style="display:none;" role="alert">
+                    		O campo Nº do PIS é de preenchimento obrigatório!
+                		</div>
+
+                		<div class="alert alert-danger cnh" style="display:none;" role="alert">
+                    		O campo CNH é de preenchimento obrigatório!
+                		</div>
+
+                		<div class="alert alert-danger dataAdmissao" style="display:none;" role="alert">
+                    		O campo DATA DE ADMISSÃO é de preenchimento obrigatório!
+                		</div>
+								
+
+
+							</div>
+							<div class="col-3"></div>
+						</div>
+
+
+
 						<button class="btn btn-outline-success btn-lg btn-block edita" name="edita" type="button"  id="gravar">
 							Gravar
 						</button>
@@ -115,8 +160,9 @@
 				</div>
 				<div class="row">
 					<div class="col-12" style="padding: 15px; padding-top: 0px;">
+
 						<button class="btn btn-outline-danger btn-lg btn-block " name="edita" type="button"  id="voltar">
-							Voltar
+							Cancelar
 						</button>
 
 
