--- a/application/views/scripts/cobrador/index.phtml
+++ b/application/views/scripts/cobrador/index.phtml
@@ -107,7 +107,7 @@
 					</div>
 					<div class="col-2" >
 						<label for="cnh" id="label">CNH</label>
-  			 			<input type="text" name="cnh" class="form-control" id="cnh" placeholder="Digite a CNH">
+  			 			<input type="text" name="cnh" class="form-control " id="cnh" placeholder="Digite a CNH">
 
 					</div>
 
@@ -115,7 +115,7 @@
 
 					<div class="col-3" >
 						<label for="dataAdmissao" id="label">Data de admissão</label>
-  			 			<input type="text" name="dataAdmissao" class="form-control date" id="dataAdmissao" placeholder="Digite a data de admissão">
+  			 			<input type="date" name="dataAdmissao" class="form-control date" id="dataAdmissao" placeholder="Digite a data de admissão">
 
 					</div>
 
